<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>metadatadeploy</artifactId>
	<version>1.13.1-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>Metadata Deploy</name>
	<description>Metadata deployment support</description>

	<developers>
		<developer>
			<name>I-TECH</name>
		</developer>
        <developer>
            <name>OpenMRS</name>
        </developer>
		<developer>
			<name>PIH</name>
		</developer>
	</developers>

	<organization>
		<name>I-TECH</name>
		<url>http://www.go2itech.org</url>
	</organization>

	<scm>
        <connection>scm:git:git@github.com:openmrs/openmrs-module-metadatadeploy.git</connection>
        <developerConnection>scm:git:git@github.com:openmrs/openmrs-module-metadatadeploy.git</developerConnection>
        <url>scm:git:https://github.com/openmrs/openmrs-module-metadatadeploy</url>
		<tag>HEAD</tag>
	</scm>

	<modules>
		<module>api</module>
		<module>api-1.10</module>
		<module>api-1.11</module>
		<module>omod</module>
	</modules>
	
	<properties>
		<openMRSVersion>1.9.9</openMRSVersion>
		<openMRSBuildVersion>1.9.9</openMRSBuildVersion>

		<!-- Module dependencies -->
		<metadatasharingVersion>1.1.8</metadatasharingVersion>
		<serializationxstreamVersion>0.2.7</serializationxstreamVersion>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- Begin OpenMRS modules -->

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>metadatasharing-api</artifactId>
				<version>${metadatasharingVersion}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api</artifactId>
				<version>${serializationxstreamVersion}</version>
				<scope>provided</scope>
			</dependency>

			<!-- End OpenMRS modules -->

			<!-- Begin OpenMRS core -->

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSBuildVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSBuildVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSBuildVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSBuildVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSBuildVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>

			<!-- End OpenMRS core -->

			<!-- Begin external libraries -->

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
			</dependency>

			<dependency>
				<groupId>net.sf.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>2.3</version>
			</dependency>

			<!-- End external libraries -->

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.1</version>
					<configuration>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <!-- see: https://stackoverflow.com/questions/53010200/maven-surefire-could-not-find-forkedbooter-class -->
                        <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>https://mavenrepo.openmrs.org/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://mavenrepo.openmrs.org/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

</project>
